@@ -1,5 +1,5 @@
 /*
- * Metaheuristic, Copyright (C) 2017-2021, Innovation platforms, LLC
+ * Metaheuristic, Copyright (C) 2017-2023, Innovation platforms, LLC
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -19,31 +19,25 @@ package ai.metaheuristic.ai.dispatcher.exec_context;
 import ai.metaheuristic.ai.dispatcher.beans.ExecContextImpl;
 import ai.metaheuristic.ai.dispatcher.data.ExecContextData;
 import ai.metaheuristic.ai.dispatcher.dispatcher_params.DispatcherParamsService;
-import ai.metaheuristic.ai.dispatcher.event.StartProcessReadinessEvent;
-import ai.metaheuristic.ai.dispatcher.event.StartTaskProcessingEvent;
+import ai.metaheuristic.ai.dispatcher.event.events.StartProcessReadinessEvent;
+import ai.metaheuristic.ai.dispatcher.event.events.StartTaskProcessingEvent;
 import ai.metaheuristic.ai.dispatcher.repositories.ExecContextRepository;
 import ai.metaheuristic.ai.dispatcher.task.TaskProviderTopLevelService;
 import ai.metaheuristic.ai.dispatcher.task.TaskTxService;
 import ai.metaheuristic.api.EnumsApi;
 import ai.metaheuristic.api.data.task.TaskApiData;
-import lombok.RequiredArgsConstructor;
+import ai.metaheuristic.commons.utils.threads.ThreadedPool;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Profile;
 import org.springframework.context.event.EventListener;
 import org.springframework.core.annotation.Order;
-import org.springframework.lang.Nullable;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import jakarta.annotation.PostConstruct;
-import java.util.ArrayList;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadPoolExecutor;
-import java.util.stream.Collectors;
 
 /**
  * @author Serge
@@ -55,71 +49,52 @@ import java.util.stream.Collectors;
 @Service
 @Profile("dispatcher")
 @Slf4j
-@RequiredArgsConstructor
 @Order(1000)
 public class ExecContextReadinessService {
 
-    private final ExecContextService execContextService;
     private final ExecContextCache execContextCache;
     private final TaskProviderTopLevelService taskProviderTopLevelService;
     private final ExecContextReconciliationTopLevelService execContextReconciliationTopLevelService;
-    private final ExecContextRepository execContextRepository;
-    private final ExecContextReadinessStateService execContextReadinessStateService;
     private final ExecContextGraphTopLevelService execContextGraphTopLevelService;
     private final DispatcherParamsService dispatcherParamsService;
     private final TaskTxService taskTxService;
 
-    private final ThreadPoolExecutor executor = (ThreadPoolExecutor) Executors.newFixedThreadPool(1);
-    private final LinkedList<Long> queue = new LinkedList<>();
+    private final ThreadedPool<Long> startProcessReadinessEventThreadedPool;
 
-    @PostConstruct
-    public void postConstruct() {
+    public ExecContextReadinessService(
+            @Autowired ExecContextCache execContextCache, @Autowired TaskProviderTopLevelService taskProviderTopLevelService,
+            @Autowired ExecContextReconciliationTopLevelService execContextReconciliationTopLevelService,
+            @Autowired ExecContextRepository execContextRepository, @Autowired ExecContextReadinessStateService execContextReadinessStateService,
+            @Autowired ExecContextGraphTopLevelService execContextGraphTopLevelService,
+            @Autowired DispatcherParamsService dispatcherParamsService, @Autowired TaskTxService taskTxService) {
+
+        this.execContextCache = execContextCache;
+        this.taskProviderTopLevelService = taskProviderTopLevelService;
+        this.execContextReconciliationTopLevelService = execContextReconciliationTopLevelService;
+        this.execContextGraphTopLevelService = execContextGraphTopLevelService;
+        this.dispatcherParamsService = dispatcherParamsService;
+        this.taskTxService = taskTxService;
+
+        startProcessReadinessEventThreadedPool = new ThreadedPool<>(1, 0, false, false, (execContextId) -> {
+            prepare(execContextId);
+            execContextReadinessStateService.remove(execContextId);
+        });
+
         final List<Long> ids = execContextRepository.findIdsByExecState(EnumsApi.ExecContextState.STARTED.code);
         log.info("Started execContextIds: " + ids);
         execContextReadinessStateService.addAll(ids);
         for (Long notReadyExecContextId : ids) {
-            putToQueue(notReadyExecContextId);
-        }
-        log.info("postConstruct(), queue: {}", getIdsFromQueue());
-    }
-
-    private void putToQueue(final Long execContextId) {
-        synchronized (queue) {
-            if (queue.contains(execContextId)) {
-                return;
-            }
-            queue.add(execContextId);
-        }
-    }
-
-    @Nullable
-    private Long pullFromQueue() {
-        synchronized (queue) {
-            return queue.pollFirst();
-        }
-    }
-
-    private List<Long> getIdsFromQueue() {
-        synchronized (queue) {
-            return new ArrayList<>(queue);
+            startProcessReadinessEventThreadedPool.putToQueue(notReadyExecContextId);
         }
     }
 
     // this method will be invoked only one time at startup
+    @SuppressWarnings("unused")
     @Async
     @EventListener
     @SneakyThrows
-    public void checkReadiness(StartProcessReadinessEvent event) {
-        // at this point queue was already filled with execContextIds in @PostConstruct method
-
-        log.info("checkReadiness() here, queue: {}", getIdsFromQueue());
-        executor.submit(() -> {
-            Long execContextId;
-            while ((execContextId = pullFromQueue()) != null) {
-                prepare(execContextId);
-                execContextReadinessStateService.remove(execContextId);
-            }
-        });
+    public void processSessionEvent(StartProcessReadinessEvent event) {
+        startProcessReadinessEventThreadedPool.processEvent();
     }
 
     private void prepare(Long execContextId) {
@@ -134,7 +109,7 @@ public class ExecContextReadinessService {
         final List<ExecContextData.TaskVertex> vertices = execContextGraphTopLevelService.findAllForAssigning(
                 execContext.execContextGraphId, execContext.execContextTaskStateId, true);
 
-        List<Long> taskIds = vertices.stream().map(v -> v.taskId).collect(Collectors.toList());
+        List<Long> taskIds = vertices.stream().map(v -> v.taskId).toList();
 
         for (Map.Entry<Long, TaskApiData.TaskState> entry : states.entrySet()) {
             final Long taskId = entry.getKey();
